@@ -195,6 +195,7 @@ FUSE_2.9 {
 		fuse_stop_cleanup_thread;
 		fuse_clean_cache;
 		fuse_reply_mmap;
+		fuse_lowlevel_notify_delete;
 
 	local:
 		*;
